--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
     }
 }
