--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+OPENAI_KEY=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
